RESOLVED FIXED258673
GraphicsContextState returns it has inline changes when it does not have any change
https://bugs.webkit.org/show_bug.cgi?id=258673
Summary GraphicsContextState returns it has inline changes when it does not have any ...
Said Abou-Hallawa
Reported 2023-06-29 08:09:19 PDT
GraphicsContextState::containsOnlyInlineChanges() and GraphicsContextState::containsOnlyInlineStrokeChanges() should return false when the m_changeFlags is empty.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-29 08:09:37 PDT
Said Abou-Hallawa
Comment 2 2023-06-29 08:19:02 PDT
Said Abou-Hallawa
Comment 3 2023-06-29 13:05:00 PDT
These two functions were return true for the empty case which is wrong. This makes Recorder::strokePath() call recordStrokeLineWithColorAndThickness() more often which causes more IPC bytes to be sent to GPUP. It also causes unnecessary DisplayList items to be handled by RemoteDisplayListRecorder::strokeLineWithColorAndThickness().
EWS
Comment 4 2023-06-29 13:16:57 PDT
Committed 265627@main (3f9ec4370045): <https://commits.webkit.org/265627@main> Reviewed commits have been landed. Closing PR #15407 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.