GraphicsContextState returns it has inline changes when it does not have any change https://bugs.webkit.org/show_bug.cgi?id=258673 rdar://111513820

Reviewed by Wenson Hsieh.

containsOnlyInlineChanges() and containsOnlyInlineStrokeChanges() should return
false when the m_changeFlags is empty.

The condition `if (m_changeFlags != (m_changeFlags & basicChangeFlags))` is
evaluated to false when m_changeFlags is empty.

* Source/WebCore/platform/graphics/GraphicsContextState.cpp:
(WebCore::GraphicsContextState::containsOnlyInlineChanges const):
(WebCore::GraphicsContextState::containsOnlyInlineStrokeChanges const):

Canonical link: https://commits.webkit.org/265627@main