Source/WebCore/platform/graphics/GraphicsContextState.cpp
@@ -46,7 +46,7 @@ GraphicsContextState GraphicsContextState::cloneForRecording() const
 
 bool GraphicsContextState::containsOnlyInlineChanges() const
 {
-    if (m_changeFlags != (m_changeFlags & basicChangeFlags))
+    if (m_changeFlags.isEmpty() || m_changeFlags != (m_changeFlags & basicChangeFlags))
         return false;
 
     if (m_changeFlags.contains(Change::StrokeBrush) && !m_strokeBrush.isInlineColor())
@@ -60,7 +60,7 @@ bool GraphicsContextState::containsOnlyInlineChanges() const
 
 bool GraphicsContextState::containsOnlyInlineStrokeChanges() const
 {
-    if (m_changeFlags != (m_changeFlags & strokeChangeFlags))
+    if (m_changeFlags.isEmpty() || m_changeFlags != (m_changeFlags & strokeChangeFlags))
         return false;
 
     if (m_changeFlags.contains(Change::StrokeBrush) && !m_strokeBrush.isInlineColor())
